:bug: Fix unreadable text in TextField when dark mode

--- a/src/com/clinical/management/view/css/applicationStyles.css
+++ b/src/com/clinical/management/view/css/applicationStyles.css
@@ -213,12 +213,14 @@
 .input .dark, .dark .input {
 	-fx-background-color: #FFFFFF0F;
     -fx-border-color: #FFFFFF14 #FFFFFF14 #9F9F9F #FFFFFF14;
+	-fx-text-fill: rgba(255, 255, 255, 0.79);
 }
 
 .input:focused .dark, .dark .input:focused {
 	-fx-background-color: #1E1E1EB3;
     -fx-border-width: 1 1 2 1px;
     -fx-border-color: #FFFFFF14 #FFFFFF14 #60CDFF #FFFFFF14;
+	-fx-text-fill: white;
 }
 
 .input:hover {
